# src/liveChat/server/router/app.go
@@ -20,5 +20,6 @@ func App() *gin.Engine {
 	r.POST("/user/userRegistry", controller.UserRegistry)
 	r.DELETE("/user/deleteUser/:id", controller.DeleteUser)
 	r.POST("/user/updateUser", controller.UpdateUser)
+	r.POST("/user/login", controller.Login)
 	return r
 }
